Bug 56423 - [uxa ivb gt2] only pointer is seen after resume
Summary: [uxa ivb gt2] only pointer is seen after resume
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-26 11:43 UTC by Jiri Slaby
Modified: 2012-11-20 19:08 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg.log (31.08 KB, text/plain)
2012-10-26 11:43 UTC, Jiri Slaby
no flags Details

Description Jiri Slaby 2012-10-26 11:43:59 UTC
Created attachment 69107 [details]
xorg.log

When I resume my computer from disk, I see only a mouse pointer. I can move with that, but that's all. I still can switch to vt 1 and restart DM. Then everything works until next resume.

I wanted to try SNA, but I hit bug 56395. Is this DDX or kernel part?
Comment 1 Jiri Slaby 2012-10-26 11:47:58 UTC
This is actually a log from SNA from a suse RPM. I wanted to give it a try before reporting this and it doesn't work the same as UXA.
Comment 2 Jiri Slaby 2012-10-26 13:27:19 UTC
Seems to work with 2.20.12-15-g40bda54.
Comment 3 Jiri Slaby 2012-10-26 13:27:46 UTC
(In reply to comment #2)
> Seems to work with 2.20.12-15-g40bda54.

(sna)
Comment 4 Chris Wilson 2012-10-26 13:30:05 UTC
Annoying, this is the symptom that we tried to fix in 2.20.10. What's your DE setup, in particular are you using any form of compositor?
Comment 5 Jiri Slaby 2012-10-26 13:32:30 UTC
(In reply to comment #4)
> Annoying, this is the symptom that we tried to fix in 2.20.10. What's your
> DE setup, in particular are you using any form of compositor?

Yes, but suse provides 2.20.3 which is older. I'm going to tell the fellows to update the pkg. Current git works for me...
Comment 6 Chris Wilson 2012-10-26 13:35:07 UTC
I'll close this for now presuming that it is the earlier bug. If the problem persists with an updated SuSE package, please let me know. Thanks.
Comment 7 Chris Wilson 2012-10-26 13:52:48 UTC
Just correcting myself, 2.20.9 had the bugfix for the blank/stuck screen in UXA across resume (and DPMS).
Comment 8 Jiri Slaby 2012-10-26 13:56:56 UTC
(In reply to comment #7)
> Just correcting myself, 2.20.9 had the bugfix for the blank/stuck screen in
> UXA across resume (and DPMS).

The guys ask me to bisect that to know what patch fixes it. Don't you remember?

[I'm too lazy to bisect now, so I won't do that and leave suse 12.2 broken until I'm back from all the conferences.]
Comment 9 Chris Wilson 2012-10-26 14:38:43 UTC
edc5b7f741a4bb8e9a58b5eb2201fa9304f94ef7, 5a45cbacb777e478d8fbda9223b0fb5c705d7249,
feef53005b57d6b4489a15f8d0db8245dcb0cfaa,
cb0b72c4fbb7b1bc941522d8679fef856f2f8936,
88cfd23379950d1fe4e682519c48ef6e3091c2f3
Comment 10 Jiri Slaby 2012-10-27 09:29:59 UTC
This does not seem to be solved completely. It's pretty rare with the commits, but it still happens occasionally.
Comment 11 Jiri Slaby 2012-10-27 09:31:23 UTC
(In reply to comment #10)
> This does not seem to be solved completely. It's pretty rare with the
> commits, but it still happens occasionally.

With SNA -- is this is a different bug?
Comment 12 Tobias Klausmann 2012-10-27 12:21:36 UTC
Try using the repository
http://download.opensuse.org/repositories/X11:/XOrg/openSUSE_12.2/
for opensuse 12.2.
Comment 13 Chris Wilson 2012-10-28 08:37:48 UTC
(In reply to comment #11)
> (In reply to comment #10)
> > This does not seem to be solved completely. It's pretty rare with the
> > commits, but it still happens occasionally.
> 
> With SNA -- is this is a different bug?

Yes. SNA did not have the same race as UXA, but there were a few bugs in the kernel as well that could result in very similar failures but were much harder to trigger than the userspace race. The most recent of which was

commit 5bb61643f6a70d48de9cfe91ad0fee0d618b6816
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Sep 27 21:25:58 2012 +0100

    drm/i915: Flush the pending flips on the CRTC before modification
Comment 14 Jiri Slaby 2012-10-28 09:25:22 UTC
(In reply to comment #13)
> commit 5bb61643f6a70d48de9cfe91ad0fee0d618b6816
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Thu Sep 27 21:25:58 2012 +0100
> 
>     drm/i915: Flush the pending flips on the CRTC before modification

Sadly, this won't help me as I'm running on 3.6.3 and this is in there already.

And the issue is not that very rare. It is rather pretty frequent. Like every second or third suspend results in this.
Comment 15 Chris Wilson 2012-10-28 10:41:43 UTC
Across suspend, there is a known issue that we don't flush all the pending work... So I have no doubt that we have some residual bugs here. :|
Comment 16 Jiri Slaby 2012-10-31 15:15:36 UTC
Anyway, the UXA case seems to work fine now. Should I create a new bug for SNA? Is this something for Daniel or for you?
Comment 17 Chris Wilson 2012-11-11 16:12:04 UTC
I'm scratching my head on this one. I definitely also see an effect whereby only the pointer is visible after DPMS until a redraw. But looking at the debug log suggests no foul play.
Comment 18 Chris Wilson 2012-11-20 16:54:32 UTC
I'm also chasing a bug common to UXA and SNA where gnome-shell appears to randomly freeze when starting an OpenGL client (e.g. openarena) where all that is visible is the pointer against a black screen. And another bug in gnome-shell were it freezes after xrandr --off ; xrandr --auto. All signs point towards g-s; rather I have not yet found a reason within the ddx for gnome-shell to block.

Back to this bug... Jiri are you using gnome-shell?
Comment 19 Jiri Slaby 2012-11-20 17:54:26 UTC
(In reply to comment #18)
> Back to this bug... Jiri are you using gnome-shell?

Negative. I use KDE4 with opengl compositing.
Comment 20 Chris Wilson 2012-11-20 17:57:29 UTC
No worries, a bit of tracing later and I can see that a SwapCompletion event is going missing...
Comment 21 Chris Wilson 2012-11-20 18:56:08 UTC
Looks like this should fix it (or at least my scenarios it does):

commit 9ab1d1f94e502e5fde87e7c171f3502f8a55f22b
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Nov 20 18:42:58 2012 +0000

    sna/dri: Queue a vblank-continuation after flip-completion
    
    If a vblank request was delayed due to a pending flip, we need to make
    sure that we then queue it after that flip or else progress ceases.
    
    Reported-by: Jiri Slaby <jirislaby@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=56423
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=57156
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 22 Jiri Slaby 2012-11-20 19:08:17 UTC
(In reply to comment #21)
> Looks like this should fix it (or at least my scenarios it does):

Yes, it looks good so far.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.