sna/dri: Queue a vblank-continuation after flip-completion

If a vblank request was delayed due to a pending flip, we need to make
sure that we then queue it after that flip or else progress ceases.

Reported-by: Jiri Slaby <jirislaby@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=56423
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=57156
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>